<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/EventTypes"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/AdminEventTypesHeader"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="@color/primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/event_types"
        android:textColor="@color/onPrimary"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/AdminEventTypesHeader" />

    <EditText
        android:id="@+id/usernameLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="150dp"
        android:background="@drawable/round_corners"
        android:hint="@string/event_name"
        android:importantForAutofill="no"
        android:inputType="text|textNoSuggestions"
        android:padding="12dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AdminEventTypesHeader"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/Description"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="username"
        android:background="@drawable/round_corners"
        android:gravity="start|top"
        android:hint="@string/usernameHint"
        android:inputType="textMultiLine"
        android:padding="12dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/usernameLogin"
        tools:ignore="VisualLintTextFieldSize" />

    <LinearLayout
        android:id="@+id/setPace"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toStartOf="@id/Level"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Description">

        <TextView
            android:id="@+id/Pace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:text="@string/pace"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editMinPace"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:hint="@string/min"
            android:importantForAutofill="no"
            android:inputType="number"
            tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

        <TextView
            android:id="@+id/Range"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:text="@string/dashRange"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editMaxPace"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:hint="@string/max"
            android:importantForAutofill="no"
            android:inputType="number"
            tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

    </LinearLayout>

    <TextView
        android:id="@+id/Level"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/level"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@id/LevelSpinner"
        app:layout_constraintStart_toEndOf="@id/setPace"
        app:layout_constraintTop_toBottomOf="@id/Description" />

    <Spinner
        android:id="@+id/LevelSpinner"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/Level"
        app:layout_constraintTop_toBottomOf="@id/Description" />

    <LinearLayout
        android:id="@+id/SetAge"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/setPace">

        <TextView
            android:id="@+id/Age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:text="@string/age"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editMinAge"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_marginStart="9sp"
            android:hint="@string/min"
            android:importantForAutofill="no"
            android:inputType="number"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/ageRange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:text="@string/dashRange"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editMaxAge"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:hint="@string/max"
            android:importantForAutofill="no"
            android:inputType="number"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>

    <Button
        android:id="@+id/AddEventTypesButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="100dp"
        android:padding="12dp"
        android:textAllCaps="true"
        android:text="@string/add_event"
        android:textSize="20sp"
        android:textStyle="bold"
        app:backgroundTint="@color/primary"
        android:background="@drawable/round_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/SetAge"
        tools:ignore="VisualLintButtonSize" />

    <ListView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/AddEventTypesButton"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>